# ComMat

./: .gitignore  .gitmodules  7sn1_H_#_#.fasta  7sn1_H_L_#.fasta  README.md  environment.yaml  environment.yml  pyproject.toml  run_inference.sh  run_inference_Honly.sh  setup.cfg  setup.py
data/: cluster_train.json  get_csv.py  igfold.test.set  rfab_valid.pkl  test.csv  train.csv  train_gp.csv  valid.csv
results/: dllogger_results.json
scripts/: 0424_get_tmscore.py  af2_loss.py  align_to_modeled.py  arguments.py  config.py  data_module.py  data_utils.py  featurizing.py  inference.py  inference_end_to_end_w_igfold.py  local_optimize.py  preprocess.py  qm9_inference.py  utils.py
scripts/runtime/: .utils.py.un~  callbacks.py  gpu_affinity.py  hu_loss.py  loggers.py  utils.py
src/colabdesign/: 0424_get_tmscore.py  AF2rank.py
test_0821/: local_optimize.in
test_output/: 7sn1_H_L_#.pkl  anarci.out_H.csv  anarci.out_KL.csv  single_chain.H.pkl  single_chain.L.pkl
test_output/relaxation_scripts/: local_optimize_1.in  local_optimize_10.in  local_optimize_11.in  local_optimize_12.in  local_optimize_13.in  local_optimize_14.in  local_optimize_15.in  local_optimize_16.in  local_optimize_17.in  local_optimize_18.in  local_optimize_19.in  local_optimize_2.in  local_optimize_20.in  local_optimize_21.in  local_optimize_22.in  local_optimize_23.in  local_optimize_24.in  local_optimize_25.in  local_optimize_26.in  local_optimize_27.in  (+12 more)
weights/: commmunity_size_1.pt  commmunity_size_16.pt  commmunity_size_2.pt  commmunity_size_32.pt  commmunity_size_4.pt  commmunity_size_8.pt
(+30 files in other folders)
