[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ComMat"
version = "0.1.0"
description = "Multi-resolution all-atom structure modeling using deep-learning methods"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Hyeonuk Woo", email = "dngusdnr1@snu.ac.kr"}, { name = "Yubeen Kim", email = "oilbeen@snu.ac.kr"}]

[project.urls]
repository = "https://github.com/seoklab/ComMat.git"


[tool.setuptools.packages.find]
where = ["src"]

