[metadata]
name = ComMat
version = 0.1.0
url = https://github.com/seoklab/ComMat
description = Community-based Deep Learning and Antibody H3 Loop Modeling
author = Hyeonuk Woo
author_email = dngusdnr1@snu.ac.kr

[options]
zip_safe = False
python_requires= >= 3.7
packages = find_namespace:
package_dir =
    = src

[options.packages.find]
where = src

[options.package_data]

